--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ header nav a.selected {
     flex-wrap: wrap;
     align-items: flex-end;
     justify-content: center;
+    padding-bottom: 100px;
 }
 
 .photo {
@@ -132,12 +133,15 @@ footer {
     /*   overflow: hidden; */
     padding: 20px 50px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 
     position: fixed;
     bottom: 0;
     width: 100%;
+
+    background-color: #000;
+    z-index: 2;
 }
 
 footer p {
@@ -159,19 +163,16 @@ footer nav a {
     opacity: 0;
     position: fixed;
     top: 50%;
-    left: 50%;
+    left: 75%;
     transform: translate(-50%, -50%);
     max-width: 500px;
-
     pointer-events: none;
-
     transition: opacity 0.3s;
 }
 
 .list {
     max-width: 640px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 5%;
     font-size: 48px;
     line-height: 1.2;
     margin-top: 120px;
@@ -188,4 +189,8 @@ footer nav a {
 
 .list a:hover img {
     opacity: 1;
+}
+
+footer a {
+    color: pink;
 }
